add: Realmで取得したDB情報を保存する処理を実装
- Repository取得時にデータが取れなかった場合はDBから取りに行く

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     // kodein
     implementation 'com.github.salomonbrys.kodein:kodein:4.1.0'
     implementation 'com.github.salomonbrys.kodein:kodein-android:4.1.0'
+    // Realm
+    apply plugin: "realm-android"
 }
 kapt {
     correctErrorTypes = true
